fix brunch spacing

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -770,6 +770,10 @@ Google map
   pointer-events: auto;
 }
 
+.brunch {
+  margin-top: 20px; 
+}
+
 /* ==========================================================================
 RSVP form
 ========================================================================== */
